<resources>
    <!--    <string name="app_name">androidTraining2_08_1912120208</string>-->
    <string name="app_name">androidTraining2_08_1912120208</string>
    <string name="title_home">首页</string>
    <string name="title_chart">图表</string>
    <string name="title_video">视频</string>
    <string name="title_me">我的</string>
    <drawable name="bkcolor">#2f2f35</drawable>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
</resources>